FIX label error

--- a/src/app/pages/person/person-list/person-list.component.html
+++ b/src/app/pages/person/person-list/person-list.component.html
@@ -87,7 +87,7 @@
               </td>
             </tr>
             <tr class="table-rows">
-              <td class="header-dialog-colunm">BNumber:</td>
+              <td class="header-dialog-colunm">Number:</td>
               <td>
                 {{ personSelected?.address?.number }}
               </td>
