--- a/src/app/pages/person/person-list/person-list.component.scss
+++ b/src/app/pages/person/person-list/person-list.component.scss
@@ -5,8 +5,19 @@
   -webkit-print-color-adjust: exact;
 }
 
-.table {
-  border: solid 2px rgba($color: #3f51b5, $alpha: 0.9);
+.acoes {
+  text-align: end;
+}
+
+.botoes {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.tableskin {
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
   border-collapse: collapse;
 }
 thead {
