--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -1,12 +1,12 @@
 <div class="row mb-4">
   <div class="col-md-9">
     <h1 class="h2 border-left pl-2">
-      {{pageTitle}}
+      {{ pageTitle }}
     </h1>
   </div>
-  <div *ngIf="showButton" class="col-md-3 text-right">
+  <div *ngIf="showButton" class="col-md-3 button-new">
     <a [routerLink]="buttonLink" class="btn" [ngClass]="buttonClass">
-      {{buttonText}}
+      {{ buttonText }}
     </a>
   </div>
 </div>
