--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.icon-pesquisar,
+.input-pesquisar {
+  color: #000 !important;
+  border-radius: 4px !important;
+  padding: 5px !important;
+  font-size: 18px !important;
+  margin-left: 5px;
+}
