add menu and home component

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-menu></app-menu>
   <router-outlet></router-outlet>
   <ng-http-loader
     [backgroundColor]="'#3f51b5'"
