--- a/src/app/pages/person/person-list/person-list.component.html
+++ b/src/app/pages/person/person-list/person-list.component.html
@@ -112,6 +112,12 @@
                       {{ personSelected?.birthDate }}
                     </td>
                   </tr>
+                  <tr class="table-rows">
+                    <td class="header-dialog-colunm">Gender:</td>
+                    <td>
+                      {{ personSelected?.gender?.description }}
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
