--- a/src/app/pages/person/person-list/person-list.component.html
+++ b/src/app/pages/person/person-list/person-list.component.html
@@ -3,7 +3,8 @@
 
   <app-page-header
     page-title="Persons"
-    button-text="+ New Person"
+    button-text="New Person"
+    [button-fa]="['fas', 'plus']"
     button-link="new"
     button-class="btn-success"
   ></app-page-header>
@@ -44,7 +45,7 @@
               type="button"
               class="btn btn-primary btn-sm botoes"
               data-bs-toggle="modal"
-              data-bs-target="#detalhe"
+              data-bs-target="#detail"
               (click)="selectPerson(person)"
             >
               <fa-icon [icon]="['fas', 'search']"></fa-icon> Detail
@@ -70,97 +71,5 @@
       (onPageChange)="paginate($event)"
     ></p-paginator>
   </div>
-  <div
-    class="modal fade"
-    id="detalhe"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Details Person</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
-        </div>
-        <div class="modal-body">
-          <div class="card">
-            <div class="card-header">Person Informations</div>
-            <div class="card-body">
-              <table class="table">
-                <tbody>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">Name:</td>
-                    <td>
-                      {{ personSelected?.name }}
-                    </td>
-                  </tr>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">E-mail:</td>
-                    <td>
-                      {{ personSelected?.email }}
-                    </td>
-                  </tr>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">Birth Date:</td>
-                    <td>
-                      {{ personSelected?.birthDate }}
-                    </td>
-                  </tr>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">Gender:</td>
-                    <td>
-                      {{ personSelected?.gender?.description }}
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header">Address Informations</div>
-
-            <div class="card-body">
-              <table class="table">
-                <tbody>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">Street:</td>
-                    <td>
-                      {{ personSelected?.address?.street }}
-                    </td>
-                  </tr>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">District:</td>
-                    <td>
-                      {{ personSelected?.address?.district }}
-                    </td>
-                  </tr>
-                  <tr class="table-rows">
-                    <td class="header-dialog-colunm">Number:</td>
-                    <td>
-                      {{ personSelected?.address?.number }}
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-bs-dismiss="modal"
-          >
-            Sair
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-person-detail [personSelected]="personSelected"></app-person-detail>
 </div>
