--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-
 @import "~@ng-select/ng-select/themes/default.theme.css";
+
 .icon-pesquisar,
 .input-pesquisar {
   color: #000 !important;
@@ -8,4 +7,34 @@
   padding: 5px !important;
   font-size: 18px !important;
   margin-left: 5px;
+}
+
+.procurar-css {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.tableskindiv {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.tableskin {
+  width: 100%;
+}
+thead {
+  background-color: rgba($color: #3f51b5, $alpha: 0.4);
+}
+th {
+  padding: 10px !important;
+}
+tbody {
+  background-color: rgba($color: #3f51b5, $alpha: 0.07);
+}
+td {
+  padding: 15px;
+  text-align: left;
+}
+tbody tr:nth-child(even) {
+  background-color: rgba($color: #3f51b5, $alpha: 0.12);
 }
