refactoring in the layout

--- a/src/app/layout/topo/topo.component.html
+++ b/src/app/layout/topo/topo.component.html
@@ -1,5 +1,5 @@
 <div class="topo" align="center">
   <div class="container">
-    <h1>SEU TOPO</h1>
+    <h1 class="titulo">SEU TOPO</h1>
   </div>
 </div>
