--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,12 +9,17 @@
   margin-left: 5px;
 }
 
+.card {
+  margin: 20px 0 !important;
+}
+
 .procurar-css {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 .tableskindiv {
+  padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
