--- a/src/app/layout/rodape/rodape.component.css
+++ b/src/app/layout/rodape/rodape.component.css
@@ -1,6 +1,11 @@
 .footer {
   width: 100%;
-  background: #f7f7f7;
+  background: #3f51b5;
+  border-top: 2px solid #00bfff;
   clear: both;
   position: absolute;
+}
+
+.titulo {
+  color: #fff;
 }
