--- a/src/app/pages/home/home-initial/home-initial.component.scss
+++ b/src/app/pages/home/home-initial/home-initial.component.scss
@@ -1,6 +1,9 @@
 .home {
-  margin-top: 20px;
-  min-height: 80vh;
+  margin: 20px 0px;
+  min-height: 72vh;
+  padding: 20px;
   position: relative;
   -webkit-print-color-adjust: exact;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
