--- a/src/app/pages/person/person-form/person-form.component.html
+++ b/src/app/pages/person/person-form/person-form.component.html
@@ -78,7 +78,7 @@
     <div class="card">
       <div class="card-header">Address Informations</div>
 
-      <div class="card-body">
+      <div class="card-body" formGroupName="address">
         <div class="row">
           <div class="form-group col-md-4">
             <label for="street">Street</label>
