--- a/src/app/pages/person/person-form/person-form.component.html
+++ b/src/app/pages/person/person-form/person-form.component.html
@@ -25,6 +25,9 @@
               id="name"
               formControlName="name"
             />
+            <app-form-field-error
+              [form-control]="resourceForm?.get('name')"
+            ></app-form-field-error>
           </div>
           <div class="form-group col-md-6">
             <label for="email">E-mail</label>
@@ -34,6 +37,9 @@
               id="email"
               formControlName="email"
             />
+            <app-form-field-error
+              [form-control]="resourceForm?.get('email')"
+            ></app-form-field-error>
           </div>
         </div>
       </div>
@@ -62,6 +68,9 @@
                 {{ item.description }}
               </ng-template>
             </ng-select>
+            <app-form-field-error
+              [form-control]="resourceForm?.get('gender')"
+            ></app-form-field-error>
           </div>
           <div class="form-group col-md-6">
             <label for="birthdate">Birth Date</label>
@@ -71,6 +80,9 @@
               id="birthDate"
               formControlName="birthDate"
             />
+            <app-form-field-error
+              [form-control]="resourceForm?.get('birthDate')"
+            ></app-form-field-error>
           </div>
         </div>
       </div>
@@ -88,6 +100,9 @@
               id="street"
               formControlName="street"
             />
+            <app-form-field-error
+              [form-control]="resourceForm?.get('address')?.get('street')"
+            ></app-form-field-error>
           </div>
           <div class="form-group col-md-4">
             <label for="district">District</label>
@@ -97,6 +112,9 @@
               id="district"
               formControlName="district"
             />
+            <app-form-field-error
+              [form-control]="resourceForm?.get('address')?.get('district')"
+            ></app-form-field-error>
           </div>
           <div class="form-group col-md-4">
             <label for="number">Number</label>
@@ -106,6 +124,9 @@
               id="number"
               formControlName="number"
             />
+            <app-form-field-error
+              [form-control]="resourceForm?.get('address')?.get('number')"
+            ></app-form-field-error>
           </div>
         </div>
       </div>
