Insert validate email

--- a/src/app/pages/person/person-form/person-form.component.html
+++ b/src/app/pages/person/person-form/person-form.component.html
@@ -32,7 +32,7 @@
           <div class="form-group col-md-6">
             <label for="email">E-mail</label>
             <input
-              type="text"
+              type="email"
               class="form-control"
               id="email"
               formControlName="email"
