--- a/src/app/pages/person/person-list/person-list.component.scss
+++ b/src/app/pages/person/person-list/person-list.component.scss
@@ -8,8 +8,14 @@
   -webkit-print-color-adjust: exact;
 }
 
-.acoes {
+.actions {
   text-align: end;
+}
+
+.actions-header {
+  padding: 10px;
+  background: #fff;
+  border: 2px solid rgba($color: #3f51b5, $alpha: 0.4);
 }
 
 .botoes {
