added generate csv file

--- a/src/app/pages/person/person-list/person-list.component.html
+++ b/src/app/pages/person/person-list/person-list.component.html
@@ -33,6 +33,12 @@
           <th>Birth Date</th>
           <th class="actions actions-header">
             <button
+              (click)="downloadReportCsv()"
+              class="btn btn-success btn-sm botoes"
+            >
+              <fa-icon [icon]="['fas', 'file-csv']"></fa-icon> CSV
+            </button>
+            <button
               (click)="downloadReportPdf()"
               class="btn btn-danger btn-sm botoes"
             >
