--- a/src/app/pages/person/person-form/person-form.component.html
+++ b/src/app/pages/person/person-form/person-form.component.html
@@ -1,4 +1,4 @@
-<div class="person">
+<div class="formcss">
   <app-bread-crumb
     [items]="[{ text: 'Persons', link: '/persons' }, { text: pageTitle }]"
   ></app-bread-crumb>
