--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -19,6 +19,14 @@
             >Persons</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink="/expense-control"
+            >Expense Controls</a
+          >
+        </li>
       </ul>
     </div>
   </div>
