Adjusts in the layout

--- a/src/app/pages/expense-control/expense-control-chart/expense-control-chart.component.html
+++ b/src/app/pages/expense-control/expense-control-chart/expense-control-chart.component.html
@@ -30,7 +30,7 @@
           </ng-select>
         </div>
       </div>
-      <div class="row">
+      <div class="row chartcss-detail">
         <div [chart]="chart"></div>
       </div>
     </div>
