--- a/src/app/pages/expense-control/expense-control-chart/expense-control-chart.component.scss
+++ b/src/app/pages/expense-control/expense-control-chart/expense-control-chart.component.scss
@@ -7,3 +7,9 @@
   position: relative;
   -webkit-print-color-adjust: exact;
 }
+
+.chartcss-detail {
+  margin: 20px 0px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
