--- a/src/app/layout/rodape/rodape.component.html
+++ b/src/app/layout/rodape/rodape.component.html
@@ -1,5 +1,3 @@
-<div class="footer" align="center">
-  <div class="container">
-    <h1 class="titulo">SEU RODAPÉ</h1>
-  </div>
+<div class="footer">
+  <h1 class="titulo">SEU RODAPÉ</h1>
 </div>
