--- a/src/app/layout/topo/topo.component.html
+++ b/src/app/layout/topo/topo.component.html
@@ -1,5 +1,3 @@
-<div class="topo" align="center">
-  <div class="container">
-    <h1 class="titulo">SEU TOPO</h1>
-  </div>
+<div class="topo">
+  <h1 class="titulo">SEU TOPO</h1>
 </div>
