--- a/src/app/pages/person/person-detail/person-detail.component.html
+++ b/src/app/pages/person/person-detail/person-detail.component.html
@@ -6,7 +6,7 @@
   aria-hidden="true"
 >
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content detail-css">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Details Person</h5>
         <button
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">
           Sair
         </button>
       </div>
