--- a/src/app/layout/topo/topo.component.css
+++ b/src/app/layout/topo/topo.component.css
@@ -1,9 +1,11 @@
 .topo {
   background: #3f51b5;
   border-bottom: 2px solid #00bfff;
-  background-size: 100% 100%;
   height: 100px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .titulo {
