--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
   border-radius: 4px !important;
   padding: 5px !important;
   font-size: 18px !important;
-  margin-left: 5px;
+  margin-left: 5px !important;
 }
 
 .card {
@@ -14,8 +14,10 @@
 }
 
 .procurar-css {
+  padding: 12px !important;
+  background-color: rgba($color: #3f51b5, $alpha: 0.8);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    rgba(0, 0, 0, 0.22) 0px 10px 10px !important;
 }
 
 .tableskindiv {
